force-app/main/default/objects/Resource_Engagement__c/fields/Allocated_Color__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Color__c</fullName>
    <label>Allocated Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>w3-amber</fullName>
                <label>Amber</label>
            </value>
            <value>
                <fullName>w3-aqua</fullName>
                <label>Acqa</label>
            </value>
            <value>
                <fullName>w3-blue</fullName>
                <label>blue</label>
            </value>
            <value>
                <fullName>w3-light-blue</fullName>
                <label>light-blue</label>
            </value>
            <value>
                <fullName>w3-brown</fullName>
                <label>brown</label>
            </value>
            <value>
                <fullName>w3-cyan</fullName>
                <label>cyan</label>
            </value>
            <value>
                <fullName>w3-blue-grey</fullName>
                <label>blue-grey</label>
            </value>
            <value>
                <fullName>w3-green</fullName>
                <label>green</label>
            </value>
            <value>
                <fullName>w3-indigo</fullName>
                <label>indigo</label>
            </value>
            <value>
                <fullName>w3-khaki</fullName>
                <label>khaki</label>
            </value>
            <value>
                <fullName>w3-lime</fullName>
                <label>lime</label>
            </value>
            <value>
                <fullName>w3-orange</fullName>
                <label>orange</label>
            </value>
            <value>
                <fullName>w3-deep-orange</fullName>
                <label>deep-orange</label>
            </value>
            <value>
                <fullName>w3-pink</fullName>
                <label>pink</label>
            </value>
            <value>
                <fullName>w3-purple</fullName>
                <label>purple</label>
            </value>
            <value>
                <fullName>w3-deep-purple</fullName>
                <label>deep-purple</label>
            </value>
            <value>
                <fullName>w3-red</fullName>
                <label>red</label>
            </value>
            <value>
                <fullName>w3-sand</fullName>
                <label>sand</label>
            </value>
            <value>
                <fullName>w3-teal</fullName>
                <label>teal</label>
            </value>
            <value>
                <fullName>w3-yellow</fullName>
                <label>yellow</label>
            </value>
            <value>
                <fullName>w3-white</fullName>
                <label>white</label>
            </value>
            <value>
                <fullName>w3-black</fullName>
                <label>black</label>
            </value>
            <value>
                <fullName>w3-grey</fullName>
                <label>grey</label>
            </value>
            <value>
                <fullName>w3-light-grey</fullName>
                <label>light-grey</label>
            </value>
            <value>
                <fullName>w3-dark-grey</fullName>
                <label>dark-grey</label>
            </value>
            <value>
                <fullName>w3-pale-red</fullName>
                <label>pale-red</label>
            </value>
            <value>
                <fullName>w3-pale-green</fullName>
                <label>pale-green</label>
            </value>
            <value>
                <fullName>w3-pale-yellow</fullName>
                <label>pale-yellow</label>
            </value>
            <value>
                <fullName>w3-pale-blue</fullName>
                <label>pale-blue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>