force-app/main/default/objects/Resource_Engagement__c/fields/Custom_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Custom_Hourly_Rate__c</fullName>
    <label>Custom Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>