force-app/main/default/objects/Resource_Engagement__c/fields/Default_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Hourly_Rate__c</fullName>
    <formula>Resource__r.Resource_Hourly_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>