force-app/main/default/objects/Resource_Engagement__c/fields/End_Date_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Engagement__c</fullName>
    <label>End Date of Engagement</label>
    <type>Date</type>
</CustomField>