force-app/main/default/objects/Resource_Engagement__c/fields/Engagement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Cost__c</fullName>
    <formula>IF( ISBLANK(Custom_Hourly_Rate__c), Default_Hourly_Rate__c, Custom_Hourly_Rate__c) *  
IF( ISBLANK(Hours_Engaged__c), 40, Hours_Engaged__c) *  (Number_of_Weekdays__c / 5)</formula>
    <label>Engagement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>