force-app/main/default/objects/Resource_Engagement__c/fields/Gantt_Filter__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Filter__c</fullName>
    <label>Gantt Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>