force-app/main/default/objects/Resource_Engagement__c/fields/Hours_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Hours_Engaged__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Hours Engaged Per Week</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>