force-app/main/default/objects/Resource_Engagement__c/fields/Number_of_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Holidays__c</fullName>
    <label>Number of Holidays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>