force-app/main/default/objects/Resource_Engagement__c/fields/Number_of_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leaves__c</fullName>
    <label>Number of Leaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>