force-app/main/default/objects/Resource_Engagement__c/fields/Number_of_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weekdays__c</fullName>
    <formula>IF(
 OR( ISBLANK(End_Date_of_Engagement__c), ISBLANK(Start_Date_of_Engagement__c) ),
0,

(5 * ( FLOOR( ( End_Date_of_Engagement__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( End_Date_of_Engagement__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Start_Date_of_Engagement__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Start_Date_of_Engagement__c - DATE( 1900, 1, 8), 7 ) ) )

)</formula>
    <label>Number of Weekdays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>