force-app/main/default/objects/Resource_Engagement__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Engagements</relationshipLabel>
    <relationshipName>Resource_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>