force-app/main/default/objects/Resource_Engagement__c/fields/Start_Date_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Engagement__c</fullName>
    <label>Start Date of Engagement</label>
    <required>true</required>
    <type>Date</type>
</CustomField>