force-app/main/default/objects/Resource_Engagement__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Resource Engagements</relationshipLabel>
    <relationshipName>Resource_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>