force-app/main/default/objects/Resource_Engagement__c/validationRules/End_Date_must_be_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date_of_Engagement__c &lt;  Start_Date_of_Engagement__c</errorConditionFormula>
    <errorDisplayField>End_Date_of_Engagement__c</errorDisplayField>
    <errorMessage>End Date of Engagement must be after Start Date of Engagement</errorMessage>
</ValidationRule>