force-app/main/default/objects/Resource_Engagement__c/validationRules/Resource_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Resource_End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date_of_Engagement__c &gt;  Project_Version__r.Targeted_Release__c</errorConditionFormula>
    <errorDisplayField>End_Date_of_Engagement__c</errorDisplayField>
    <errorMessage>End Date of Engagement cannot be after Project&apos;s Targeted Release Date.</errorMessage>
</ValidationRule>