force-app/main/default/objects/Resource_Engagement__c/validationRules/Resource_Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Resource_Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date_of_Engagement__c &lt; Project_Version__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date_of_Engagement__c</errorDisplayField>
    <errorMessage>Start Date of Engagement cannot be older than Project&apos;s Start Date.</errorMessage>
</ValidationRule>